--- a/index.html
+++ b/index.html
@@ -3,12 +3,66 @@ layout: default
 title: Home
 ---
 
-Home
-
-### More Information
-
-A place to include any other types of information that you'd like to include about yourself.
-
-### Contact me
-
-[email@domain.com](mailto:email@domain.com)
+<DIV CLASS="hero">
+    <DIV ID="slogan">
+        Grow your business today!
+    </DIV>    
+</DIV>
+<div id="header"></div>
+	<script>
+	$('#header').load('header.html');
+	</script>
+    
+<DIV CLASS="mainContainer">    
+    <DIV ID="services">
+        <h2 CLASS="subTitle">Our Services</h2>
+        <UL>
+            <LI>
+              Mobile Websites      
+            </LI>
+            <LI>
+                  Responsive Website Design  
+            </LI>
+            <LI>
+                   Landing Page Design 
+            </LI>
+            <LI>
+               Full Website Design     
+            </LI>
+            <LI>
+                 Website Redesign   
+            </LI>
+            <LI>
+                 iOs & Android App Design   
+            </LI>
+            <LI>
+                Interactive Prototypes    
+            </LI>
+            <LI>
+                Creative Strategy    
+            </LI>
+            <LI>
+               Photography     
+            </LI>
+        </UL>  
+    </DIV>
+</DIV>
+<DIV CLASS="oddRow">
+    <DIV CLASS="mainContainer">
+      <DIV ID="work">
+        <A target="_blank" HREF="images/work/0.png"><IMG SRC="images/work/0.png" STYLE="margin:-80px auto 20px;"></A>
+        <IMG SRC="images/work/0-2.png">
+        <IMG SRC="images/work/5.png"><IMG SRC="images/work/5-1.jpg"><IMG SRC="images/work/5-2.png"><IMG SRC="images/work/5-3.png">
+            
+        <IMG SRC="images/work/1.jpg">
+        <IMG SRC="images/work/1-2.jpg">
+        <IMG SRC="images/work/2.jpg">
+        <IMG SRC="images/work/2-2.jpg">
+        <IMG SRC="images/work/3.jpg">
+        <IMG SRC="images/work/3-2.jpg">
+        <IMG SRC="images/work/6.jpg">
+        <IMG SRC="images/work/6-2.jpg">
+        <IMG SRC="images/work/7.jpg">
+      </DIV>
+    </DIV>
+</DIV>
