--- a/blog.html
+++ b/blog.html
@@ -1,8 +1,15 @@
 ---
-layout: post
+layout: page
 title: Blog
 permalink: /blog/
 ---
+
+<DIV CLASS="hero" ID="aboutUsHero">
+    <DIV ID="slogan">
+        Bloomington, Indiana Web Design Blog
+        <div></div>
+    </DIV>    
+</DIV>
 
 <div class="posts">
   {% for post in site.posts %}
