--- a/pricing.html
+++ b/pricing.html
@@ -18,18 +18,52 @@ permalink: /pricing/
 
 <DIV CLASS="oddRow">
     <DIV CLASS="mainContainer">
-    <DIV CLASS="subTitleAlt"><i class="fas fa-comments"></i> Testimonials</DIV>
-<UL ID="testi">
-    <LI>
-    "Danny has to be the best designer that I have had the pleasure of working with. He is always trying to incorporate latest industry trends without losing the the focus of the business. He has a very keen eye for amazing designs and is constantly trying to innovate to set his designs above the status quo."
-    </LI>
-    <LI>
-    "Danny has amazing design skills; not only was he able to capture our founder's vision he was also able to add his own style to the product. He is a very strong worker and an asset to any team that needs a smart designer."
-    </LI>
-    <LI>
-"Danny's work formed the basis for Regroup's user interface and gave our site exactly the look and feel we wanted. He is an extremely talented user interface designer - 10 out of 10 - and also extremely easy to work with, receptive to feedback, and able to design in any style or format as well as come up with his own design suggestions and work independently. We were fortunate to have Danny work with us and I wouldn't hesitate to work with him again."
-    </LI>
-</UL>
+    <DIV CLASS="subTitleAlt">What you get</DIV>
+
+hosting
+new domain name or domain name update. 15/yr after first year (the cost of the domain.)
+mobile friendly web site design
+interactive prototype to approve your design
+5 sub pages
+homepage gallery slider
+contact form/ phone number call to action
+mobile friendly
+        
+        <DIV ID="services">
+        <h2 CLASS="subTitle">Our Services</h2>
+        <UL>
+            <LI>
+              Logo refresh or simple logo creation      
+            </LI>
+            <LI>
+                Hosting 
+            </LI>
+            <LI>
+                 New domain name or domain name update. 15/yr after first year (the cost of the domain.)
+            </LI>
+            <LI>
+              Mobile friendly web site design   
+            </LI>
+            <LI>
+                 5 Sub Pages
+            </LI>
+            <LI>
+                Blog
+            </LI>
+            <LI>
+                 Homepage Image Gallery Slider  
+            </LI>
+            <LI>
+                Contact form & phone number call to action   
+            </LI>
+            <LI>
+                Creative Strategy    
+            </LI>
+            <LI>
+               Photography     
+            </LI>
+        </UL>  
+    </DIV>
     
     </DIV>
 </DIV>
