--- a/pricing.html
+++ b/pricing.html
@@ -38,7 +38,7 @@ permalink: /pricing/
                  5 Sub Pages
             </LI>
             <LI>
-                Blog
+                SEO Friendly Blog
             </LI>
             <LI>
                  Homepage Image Gallery Slider  
@@ -47,10 +47,10 @@ permalink: /pricing/
                 Contact form & phone number call to action   
             </LI>
             <LI>
-                Creative Strategy    
+                Image Gallery    
             </LI>
             <LI>
-               Photography     
+               Social Connect    
             </LI>
         </UL>  
     </DIV>
