--- a/pricing.html
+++ b/pricing.html
@@ -53,6 +53,7 @@ permalink: /pricing/
                Social Connect    
             </LI>
         </UL>  
+            <A CLASS="button" HREF="#quoteForm">Get started today!</A>
     </DIV>
     
     </DIV>
