--- a/pricing.html
+++ b/pricing.html
@@ -53,8 +53,8 @@ permalink: /pricing/
                Social Connect    
             </LI>
         </UL>  
+            <DIV STYLE="margin:20px 0px 0px 0px; text-align: center;"><A CLASS="button" HREF="#quoteForm">Get started today!</A></DIV>
     </DIV>
-     <A CLASS="button" HREF="#quoteForm">Get started today!</A>
     
     </DIV>
 </DIV>
