--- a/pricing.html
+++ b/pricing.html
@@ -53,7 +53,7 @@ permalink: /pricing/
                Social Connect    
             </LI>
         </UL>  
-            <DIV CLASS="topPad Center"><A CLASS="button" HREF="#quoteForm">Get started today!</A></DIV>
+            <DIV CLASS="topPad center"><A CLASS="button" HREF="#quoteForm">Get started today!</A></DIV>
     </DIV>
     
     </DIV>
