--- a/pricing.html
+++ b/pricing.html
@@ -12,7 +12,7 @@ permalink: /pricing/
     
 <DIV CLASS="mainContainer pad" STYLE="max-width:600px;">  
     <DIV CLASS="subTitleAlt">Straight forward pricing</DIV>
-30/m + 100 design/ set up fee or 360/yr (no design/set up fee!)
+$30/month + $100 design/ set up fee or $360/yr (no design/set up fee!)
 
     </DIV>
 
