--- a/pricing.html
+++ b/pricing.html
@@ -53,7 +53,7 @@ $30/month + $100 design/ set up fee or $360/yr (no design/set up fee!)
                Social Connect    
             </LI>
         </UL>  
-            <DIV CLASS="topPad center"><A CLASS="button" HREF="#quoteForm">Get started today!</A></DIV>
+            <DIV CLASS="topPad center"><A CLASS="button" HREF="#quoteForm"><i class="fas fa-chevron-right"></i>Get started today!</A></DIV>
     </DIV>
     
     </DIV>
